Adjusted layout issue for xkcd checkbox and radio buttons, adjusted jake_user and lorem_ipsum submit button layout.

--- a/public/mystyle.css
+++ b/public/mystyle.css
@@ -1,9 +1,9 @@
-.checkbox, h2, button{
+h2, button{
   margin-bottom: 30px;
 }
 
 .other-color{
-  background-color: #000;
+  background-color: #abd;
 }
 
 .navbar-inverse .navbar-brand{
